Fix overflow of button text on small screens

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 
           <div class="inline-flex">
             <button class="btn primary hidden" type="button" id="copy-pxon">
-              Copy PXON ‹›
+              Copy <span class="desktop-text">XON ‹›</span>
             </button>
 
             <a class="btn primary hidden" type="button" id="download-pxon">
-              Download PXON ↓
+              Download<span class="desktop-text">PXON ↓</span>
             </a>
           </div>
         </div>
